[package]
name = "ethbridge-bridge-contract"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]

[dependencies.ethbridge-bridge-events]
features = ["ethers-derive"]
path = "../ethbridge-bridge-events"

[dependencies.ethbridge-structs]
features = []
path = "../ethbridge-structs"

[dependencies.ethers]
optional = false
version = "2.0.0"

[dependencies.ethers-contract]
optional = false
version = "2.0.0"
