[package]
name = "generate-ethbridge-crates"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
convert_case = "0.6.0"
ethers-contract = { version = "2.0.0", features = ["abigen"] }
eyre = "0.6.8"
itertools = "0.10.5"
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
syn = { version = "1.0.109", features = ["full"] }
tempdir = "0.3.7"
tera = "1.17.1"
toml = "0.7.3"
