[package]
name = "test-ethbridge-events"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ethabi = "18.0.0"
ethbridge-bridge-events = { path = "../ethbridge-bridge-events" }
ethbridge-events = { path = "../ethbridge-events" }
ethers-contract = "2.0.0"
